overflow error fix

--- a/app/src/app/components/readme/readme.component.css
+++ b/app/src/app/components/readme/readme.component.css
@@ -5,8 +5,8 @@
     /* font-family: 'Times New Roman', Times, serif; */
     user-select: text;
 
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-width: 100%;
     margin: 0;
     min-width: 0;
 
